syntax = "proto3";
package order;

option go_package = "adapter/proto";

message Command {
  oneof command {
    CreateOrderCommand create_order_command = 1;
  }
}

message CreateOrderCommand {
  string order_id = 1;
  string customer_id = 2;
  string product_id = 3;
  uint32 quantity = 4;
  string expected_delivery_date = 5;
  string pickup_date = 6;
  Address pickup_address = 7;
  Address destination_address = 8;
}

message Address {
  string street = 1;
	string city = 2;
	string country = 3;
	string state = 4;
	string zip_code = 5;
}

message Order {
  oneof event {
    OrderCreatedEvent order_created_event = 1;
  }
}

message OrderCreatedEvent {
  string order_id = 1;
  string customer_id = 2;
  string product_id = 3;
  uint32 quantity = 4;
  string expected_delivery_date = 5;
  string pickup_date = 6;
  Address pickup_address = 7;
  Address destination_address = 8;
}
